# arbb-vm

./: .gitattributes  ArbbVM.chs  DEVLOG.txt  LICENSE  Makefile  README  TODO.txt  Test.hs  Test2.hs  arbb-vm.cabal  arbb_vmwrap.c  arbb_vmwrap.h  install_environment_vars.sh  nightly_test.hs  run_one_test.sh  run_tests.sh  run_trivial.sh  test_trivial.hs
Intel/: ArbbVM.chs  ArbbVMUtils.hs
Intel/ArbbVM/: Convenience.hs  Debug.hs  Type.hs
accelerate/: README.txt  get_accelerate.sh
accelerate/Data/Array/Accelerate/: ArBB.hs  ArBBimm.hs
accelerate/Data/Array/Accelerate/ArBB/: Data.hs  Data2.hs  Gen.hs  State.hs  Type.hs
accelerate/tests/: Makefile  Test_Data_Generation.hs
accelerate/tests/ArBB/: Test1.hs  Test2.hs
accelerate/tests/ArBB/Benchmarks/: DotP.hs  Incr.hs  Main.hs  Makefile  Matrix.hs  Saxpy.hs  Sum.hs  dotp.cpp  measurements.txt
accelerate/tests/ArBB/BlackScholes/: BlackScholes.hs  Main.hs  Makefile  run_tests.sh
accelerate/tests/ArBB/Experiments/: Main.hs
accelerate/tests/ArBB/UseNode/: Main.hs  Makefile  UseNode.hs  run_tests.sh
cbits/: Makefile  arbb_alt_1.0.0.015.h  arbb_vmapi.h  arbb_vmwrap.c  arbb_vmwrap.h
examples/haskell/: README.txt
examples/tests/: Bench_BlackScholes.hs  Bench_ReduceArBB.hs  Bench_ReduceOwn.hs  Err_NestedFuns.hs  Test_Conditional1.hs  Test_Constants.hs  Test_DenseResults.hs  Test_DenseResults2.hs  Test_DenseResults3.hs  Test_DotProd.hs  Test_DotProdConv.hs  Test_DummyBlackScholes.hs  Test_DummyBlackScholes1.hs  Test_Execute.hs  Test_FunctionCalls.hs  Test_FunctionCalls2.hs  Test_FunctionCalls3.hs  Test_FunctionCalls4.hs  Test_FunctionCalls5.hs  Test_Loop1.hs  Test_Loop2.hs  Test_Map1.hs  Test_MultipleDefaultContextCalls.hs  Test_Reduce1.hs  Test_Reduce2.hs  Test_Reduce3.hs  Test_Reduce4.hs  Test_Scan1.hs  Test_SegFold.hs  Test_Simple1.hs  Test_Simple2.hs
examples/vm_haskell/: Mandel.hs  README.txt
