Name:           arbb-vm
Version:        0.1.1

License:                BSD3
License-file:           LICENSE
Stability:              Beta
Maintainer:		Joel Svensson<svensson.bj@gmail.com>
Author:			Joel Svensson<svensson.bj@gmail.com>

Copyright:              Copyright (c) 2011 Intel Corporation
Synopsis:               FFI binding to the Intel Array Building Blocks (ArBB) virtual machine.
HomePage:               git://github.com/svenssonjoel/arbb-vm/wiki
Description: 
   DESCRIPTION GOES HERE.

Category: Foreign
Cabal-Version: >=1.8
Tested-With: GHC == 7.0.1

build-type: Simple

source-repository head
  type:     git
  location: git://github.com/svenssonjoel/arbb-vm.git


----------------------------------------------------------------------------------------------------
library
  build-depends: base >= 4 && < 5, haskell98
               , mtl >= 2.0 
               , bytestring
               , cereal

  exposed-modules: Intel.ArbbVM
                 , Intel.ArbbVM.Convenience
  GHC-Options: -O2 
  extra-libraries: tbb, arbb, pthread
  include-dirs: /opt/intel/arbb/latest/include

  -- FIXME: How do we read an environment variable?
  if arch( x86_64 ) 
    extra-lib-dirs: /opt/intel/arbb/latest/lib/intel64
  else
    extra-lib-dirs: /opt/intel/arbb/latest/lib/ia32

  C-sources: 
-- [2011.02.15] Don't need this at the moment because of the arbb_alt hack:
--      cbits/arbb_vmwrap.c
--    , cbits/arbb_vmwrap.h

  Include-Dirs: cbits

